:bug: certif: fix scrollbar on certif centers menu

--- a/certif/app/styles/components/user-logged-menu.scss
+++ b/certif/app/styles/components/user-logged-menu.scss
@@ -54,8 +54,9 @@
   top: 60px;
   right: 0;
   min-width: 400px;
+  max-width: 600px;
   max-height: 600px;
-  overflow: scroll;
+  overflow: auto;
 
   &-item {
     text-decoration: none;
